--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,47 @@
 annotated-types==0.5.0
 anyio==3.7.1
+blinker==1.6.2
+Brotli==1.0.9
+certifi==2023.7.22
+charset-normalizer==3.2.0
 click==8.1.6
+ConfigArgParse==1.7
 fastapi==0.101.0
+Flask==2.3.2
+Flask-BasicAuth==0.2.0
+Flask-Cors==4.0.0
+gevent==23.7.0
+geventhttpclient==2.0.9
+greenlet==2.0.2
+gunicorn==21.2.0
 h11==0.14.0
 httptools==0.6.0
 idna==3.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
+locust==2.16.0
+loguru==0.7.0
+MarkupSafe==2.1.3
+msgpack==1.0.5
+packaging==23.1
+psutil==5.9.5
 pydantic==2.1.1
 pydantic_core==2.4.0
 python-dotenv==1.0.0
 PyYAML==6.0.1
+pyzmq==25.1.0
+requests==2.31.0
+roundrobin==0.0.4
+six==1.16.0
 sniffio==1.3.0
 starlette==0.27.0
+termcolor==2.3.0
 typing_extensions==4.7.1
+urllib3==2.0.4
 uvicorn==0.23.2
 uvloop==0.17.0
 watchfiles==0.19.0
 websockets==11.0.3
+Werkzeug==2.3.6
+zope.event==5.0
+zope.interface==6.0
