--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,8 @@ loguru==0.7.0
 MarkupSafe==2.1.3
 msgpack==1.0.5
 packaging==23.1
+prometheus-client==0.17.1
+prometheus-fastapi-instrumentator==6.1.0
 psutil==5.9.5
 pydantic==2.1.1
 pydantic_core==2.4.0
